--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -56,3 +56,26 @@
 .h-7 {
   height: 7%;
 }
+
+.modal{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.5);
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  overflow: hidden;
+  z-index: 999;
+}
+
+.modal.open{
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+}
